sewup-derive/tests/compile-fail/ewasm_fn_sig.rs
use sewup_derive::ewasm_fn_sig;

fn main() {
    let a = ewasm_fn_sig!(some);
}
